# nodejs-vs-deno-vs-bun-vs-others

./: .env  .gitignore  LICENSE  Makefile  README.md  compose.yaml  nodejs-vs-deno-vs-bun-vs-others.code-workspace
apps/: update-versions.sh  versions.txt
apps/bun/: Dockerfile  Dockerfile.vtmpl  Makefile
apps/bun/test_app/: bun.lockb  package.json  package.json.vtmpl
apps/bun/test_app/src/: main.ts
apps/c++/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/c++/test_app/: CMakeLists.txt  Makefile
apps/c++/test_app/src/: main.cpp  primes.hpp
apps/csharp/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/csharp/test_app/: test_app.csproj
apps/csharp/test_app/Properties/: launchSettings.json
apps/csharp/test_app/src/: Controller.cs  Primes.cs  Program.cs
apps/deno/: Dockerfile  Dockerfile.vtmpl  Makefile
apps/deno/test_app/: deno.jsonc
apps/deno/test_app/src/: deps.ts  deps.ts.vtmpl  main.ts  primes.ts
apps/java/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/java/test_app/: build.gradle  build.gradle.vtmpl
apps/java/test_app/gradle/wrapper/: gradle-wrapper.properties.vtmpl
apps/java/test_app/src/main/resources/: application.properties
apps/nodejs/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/nodejs/test_app/: package-lock.json  package.json  package.json.vtmpl  tsconfig.json
apps/nodejs/test_app/src/: main.ts
apps/python/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/python/test_app/: pyproject.toml  pyproject.toml.vtmpl
apps/python/test_app/test_app/: main.py  primes.py  pyproject.toml
apps/rust/: .dockerignore  Dockerfile  Dockerfile.vtmpl  Makefile
apps/rust/test_app/: Cargo.toml  Cargo.toml.vtmpl  Rocket.toml
apps/rust/test_app/src/: main.rs  primes.rs
tests/: .gitignore  JMeterMakefile  Makefile  compose.yaml
tests/jmeter/: test-plan.jmx
tests/results-processor/: Dockerfile  pyproject.toml
tests/results-processor/results_processor/: main.py
(+3 files in other folders)
